--- a/第一版页面/css/index.css
+++ b/第一版页面/css/index.css
@@ -350,7 +350,7 @@ table {
     border-spacing: 0;
 }
 
-/* custom */
+custom
 a {
     color: #7e8c8d;
     text-decoration: none;
@@ -361,7 +361,7 @@ li {
     list-style: none;
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
     width: 5px;
     height: 5px;
 }
@@ -390,7 +390,7 @@ html, body {
 body {
     -webkit-text-size-adjust: none;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
+} */
 
 
 /* 蓝色导航条样式 */
