--- a/第一版页面/css/main.css
+++ b/第一版页面/css/main.css
@@ -176,3 +176,26 @@ div.hidden-box li{
 span.red {
     color: #f75f0c;
 }
+
+/* 分页 */
+ul.pagination {
+    display: inline-block;
+    margin-bottom: 46px;
+}
+.pagination > li > a, .pagination > li > span{
+    margin-right: 12px;
+    padding: 9px 25px;
+    color: #333;
+}
+.pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus {
+    background-color: #49cbcd;
+    border-color: #49cbcd;
+}
+.pagination > li:first-child > a, .pagination > li:first-child > span, .pagination > li:last-child > a, .pagination > li:last-child > span{
+    border-radius: 0px;
+}
+.pagination > li > a.morePage, .pagination > li > span {
+    background: #fff;
+    border: none;
+    padding: 9px 8px;
+}
