--- a/第一版页面/css/main.css
+++ b/第一版页面/css/main.css
@@ -241,7 +241,8 @@ div.pagination ul li.active {
     background: #49cbcd;
     color: #fff;
 }
-div.pagination ul li.morePageNext {
+div.pagination ul li.morePageNext, 
+div.pagination ul li.morePagePrev {
     background: #fff;
     border: none;
     width: 30px;
